# lariat-data-platform

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
example/: CMakeLists.txt  README.md  plugin.cpp  service.cpp
include/: ldp.hpp  ldp_module.hpp  ldp_plugin.hpp  ldp_runtime.hpp  ldp_service.hpp
include/ldp/: application.hpp  config.hpp  logger.hpp  registry.hpp  resource.hpp  service.hpp
include/ldp/common/: object.hpp  system.hpp
include/ldp/core/: blob.hpp  config.hpp  fifo.hpp  interface.hpp  logger.hpp  object.hpp
include/ldp/framework/: config.hpp  connector.hpp  logger.hpp  service.hpp
include/ldp/provider/: fifo.hpp
include/ldp/resource/: blob.hpp  blob_storage.hpp  consumer.hpp  fifo.hpp  message.hpp  message_queue.hpp  provider.hpp
include/ldp/runtime/: engine.hpp  plugin.hpp  service.hpp
include/ldp/templates/: blob.ipp  fifo.ipp  service.ipp
ldpx/: ldpx.hpp  main.cpp
plugins/: README.md
plugins/minio/: LICENSE  README.md  plugin.cpp
src/: argparse.hpp  config.cpp  config.hpp  connector.cpp  connector.hpp  ldp.hpp  logger.cpp  logger.hpp  main.cpp  plugin.cpp  runtime.cpp  runtime.hpp  service.cpp
src/runtime/: config.cpp  logger.cpp  module.cpp  registry.cpp
